vix/tests/checker-corpus/reject/unresolved-type.vix
fn main(x: Missing) -> Int {
    1
}
